--- a/test/data/marriage-abroad-responses-and-expected-results.yml
+++ b/test/data/marriage-abroad-responses-and-expected-results.yml
@@ -10977,17 +10977,65 @@
 - :current_node: :country_of_ceremony?
   :responses:
   - italy
+  :next_node: :legal_residency?
+  :outcome_node: false
+- :current_node: :legal_residency?
+  :responses:
+  - italy
+  - uk
   :next_node: :partner_opposite_or_same_sex?
   :outcome_node: false
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
   - italy
+  - uk
   - opposite_sex
   :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
 - :current_node: :partner_opposite_or_same_sex?
   :responses:
   - italy
+  - uk
+  - same_sex
+  :next_node: :outcome_marriage_abroad_in_country
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - italy
+  - ceremony_country
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - italy
+  - ceremony_country
+  - opposite_sex
+  :next_node: :outcome_marriage_abroad_in_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - italy
+  - ceremony_country
+  - same_sex
+  :next_node: :outcome_marriage_abroad_in_country
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - italy
+  - third_country
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - italy
+  - third_country
+  - opposite_sex
+  :next_node: :outcome_marriage_abroad_in_country
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - italy
+  - third_country
   - same_sex
   :next_node: :outcome_marriage_abroad_in_country
   :outcome_node: true
