Add combined question template
This new question template is a combination of
`did_the_employee_work_for_you?` and `is_the_employee_on_your_payroll?`.

Instead of asking separately:
"Did the employee work for you on or before 1 April 2017?"

and

"Was the employee (or will they be) on your payroll on 17 September
2017?"

We will instead ask:

"Did the employee have a contract with you between 1 April 2017 and
17 September 2017?"

Subsequent commits will incorporate this new template into the flow.

--- a/test/data/maternity-paternity-calculator-files.yml
+++ b/test/data/maternity-paternity-calculator-files.yml
@@ -33,6 +33,7 @@ lib/smart_answer_flows/maternity-paternity-calculator/questions/date_of_adoption
 lib/smart_answer_flows/maternity-paternity-calculator/questions/day_of_the_month_paternity.govspeak.erb: 1823b77cf9cf40ecf80e07dd33266027
 lib/smart_answer_flows/maternity-paternity-calculator/questions/days_of_the_week_paternity.govspeak.erb: ce2d5278933de5dc098e68bb1d01e914
 lib/smart_answer_flows/maternity-paternity-calculator/questions/did_the_employee_work_for_you.govspeak.erb: 0debeb673f7fa153c854fc76a11fd12c
+lib/smart_answer_flows/maternity-paternity-calculator/questions/did_the_employee_work_for_you_between.govspeak.erb: e91a9ff4c102f89c80f5d3498a6174ef
 lib/smart_answer_flows/maternity-paternity-calculator/questions/earnings_for_pay_period.govspeak.erb: f37590baba20a8023bb85a8fbd00d9c0
 lib/smart_answer_flows/maternity-paternity-calculator/questions/earnings_for_pay_period_adoption.govspeak.erb: 0970c7f65092030e7d913ff9fd7967b8
 lib/smart_answer_flows/maternity-paternity-calculator/questions/earnings_for_pay_period_paternity.govspeak.erb: 03df1daf2e9063f46474459baf18fb4a
