Create outcomes per path for Kenya
- Create a title template
- Add outcomes templates
- Add Country to 18 countries list
- Add country to FLATTEN_COUNTRIES_18_OUTCOMES for tests
- Update responses and expected results
- Update checksums

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -422,6 +422,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_local/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_other/_opposite_sex.govspeak.erb: 681accc015dec138b41ee8c697ec8c43
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/jordan/uk/partner_other/_same_sex.govspeak.erb: 84ad27e2cd66595dcbf54efbc1ef10f1
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/_title.govspeak.erb: 6e85b0baf375250e28c8b08cffa93903
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_british/_opposite_sex.erb: 7246d8370e7dd42446d2d4255ce32253
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_british/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_local/_opposite_sex.erb: c0a753287888529e10933f9c40650d04
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_local/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_other/_opposite_sex.erb: c0a753287888529e10933f9c40650d04
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/ceremony_country/partner_other/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_british/_opposite_sex.erb: c23f360a0cffc9ce60165740e7464975
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_british/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_local/_opposite_sex.erb: 5bb40683ef30629c79bc2b7ec6f00fdc
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_local/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_other/_opposite_sex.erb: 5bb40683ef30629c79bc2b7ec6f00fdc
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/third_country/partner_other/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_british/_opposite_sex.erb: 449823b7613c1aacbbc6e6dd24121c0c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_british/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_local/_opposite_sex.erb: a6440364afe2eff4263ff520f59c6026
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_local/_same_sex.erb: 899586387780b09d65e7249ba614a55c
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_other/_opposite_sex.erb: a6440364afe2eff4263ff520f59c6026
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/kenya/uk/partner_other/_same_sex.erb: 899586387780b09d65e7249ba614a55c
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/_title.govspeak.erb: f6ce88513e69e5202d0c9c8b25a4ef18
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_opposite_sex.govspeak.erb: a2f9c0739c60a6223991d5ed34282c59
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/latvia/ceremony_country/partner_british/_same_sex.govspeak.erb: c394c40e1b3052793dc962e01b738699
@@ -767,4 +786,4 @@ lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationali
 lib/smart_answer_flows/marriage-abroad.rb: 5baa826bfa5354c27b97ccaf4030628e
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 1dc349abcd6b21e1bf8c397d96fd02b8
 test/data/marriage-abroad-questions-and-responses.yml: 0f079512ee2f1fd27145bf9db84ef5eb
-test/data/marriage-abroad-responses-and-expected-results.yml: 880f69b066eb5887d7b49b49935711f2
+test/data/marriage-abroad-responses-and-expected-results.yml: bd6421ffa521f2aab9d0aff7e9fee0f4
