Marriage Abroad improvement: Finland (2 outcomes)
In order to simplify the maintenance of the marriage-abroad code,
we are going to redefine the structure of some templates.

Here we are going to define only 2 templates for Finland:
- 1 for uk-resident users
- 1 for non-uk resident users (i.e. resident in Finland on in
another country)

This template structure is different from the one we already defined
from 2 outcomes countries. There the template definition is
determined by the gender of the partner, here it is defined by the
legal residency of the user.

We are therefore applying some changes to make this new behaviour
available. I.e. create:
- a title template partial for Finland
- a uk-resident template partial
- a non-uk-resident template partial
- an outcome template `outcome_marriage_abroad_in_finland.rb`, which
selects the right partial on the basis of the
`calculator.resident_of_uk?` value.

We also modified the marriage-abroad flow
(`lib/smart_answer_flows/marriage-abroad.rb`) in order to get the
outcome `:outcome_marriage_abroad_in_finland` after the
`:legal_residency?` node.

The tests related to Finland were updated appropriately.

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -294,6 +294,9 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_local/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_other/_opposite_sex.erb: dd80586e620230231b1c5d961b36781a
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/uk/partner_other/_same_sex.erb: 57bc673883a15be7eee68906bb8b49cd
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_ceremony_or_third_country.govspeak.erb: 054a28c71251d3fa3d2802d3cc1c0a76
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_title.govspeak.erb: 9e2b9fed60bd62f5678467ea6571bba2
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_uk.govspeak.erb: '09d50e4e5ed1cbb0d3f829a30f5b77b7'
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_opposite_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_same_sex.govspeak.erb: 52cc5676000cdd6fad6e0f20c0cbc0fa
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/france/_title.govspeak.erb: 89e48e72170d1df47f28b434ae630ecf
@@ -738,6 +741,7 @@ lib/smart_answer_flows/marriage-abroad/outcomes/outcome_ceremonies_in_switzerlan
 lib/smart_answer_flows/marriage-abroad/outcomes/outcome_civil_partnership_in_france_or_french_overseas_territory.govspeak.erb: 3624ffbf8519776e60a8393c686b677b
 lib/smart_answer_flows/marriage-abroad/outcomes/outcome_civil_partnership_in_monaco.govspeak.erb: bc178609ab08f0ac60bf16a643cb3506
 lib/smart_answer_flows/marriage-abroad/outcomes/outcome_marriage_abroad_in_country.govspeak.erb: b140c08fee8df0d874d267dce0455730
+lib/smart_answer_flows/marriage-abroad/outcomes/outcome_marriage_abroad_in_finland.govspeak.erb: 4bfc3a68abeb9511461fdf2a65f03d02
 lib/smart_answer_flows/marriage-abroad/outcomes/outcome_marriage_in_france_or_french_overseas_territory.govspeak.erb: a24a344ed71ba9a4ebed587f41fc0b2c
 lib/smart_answer_flows/marriage-abroad/outcomes/outcome_marriage_in_monaco.govspeak.erb: 5c875e819a8a0014bd84d0dc354d86a5
 ? lib/smart_answer_flows/marriage-abroad/outcomes/outcome_opposite_sex_in_no_cni_countries_when_residing_in_ceremony_or_third_country.govspeak.erb
@@ -818,7 +822,7 @@ lib/smart_answer_flows/marriage-abroad/questions/legal_residency.govspeak.erb: 7
 lib/smart_answer_flows/marriage-abroad/questions/marriage_or_pacs.govspeak.erb: a51aecfac697188f90ca9efefcb2e0ea
 lib/smart_answer_flows/marriage-abroad/questions/partner_opposite_or_same_sex.govspeak.erb: 40d0c99a5be50f0625c6562f06fe4afd
 lib/smart_answer_flows/marriage-abroad/questions/what_is_your_partners_nationality.govspeak.erb: 80e04f36c75c232bede1a244d621471e
-lib/smart_answer_flows/marriage-abroad.rb: a5cbdc635d65367712b2ffbc67d0029a
+lib/smart_answer_flows/marriage-abroad.rb: 8b5a2e2abeee8d3735fcc507dab65e71
 lib/smart_answer_flows/shared/_overseas_passports_embassies.govspeak.erb: 1dc349abcd6b21e1bf8c397d96fd02b8
 test/data/marriage-abroad-questions-and-responses.yml: 0f079512ee2f1fd27145bf9db84ef5eb
-test/data/marriage-abroad-responses-and-expected-results.yml: 7f79299d08bd9d24798702db5a1f077c
+test/data/marriage-abroad-responses-and-expected-results.yml: ab0405ffe0851ac14842de89d9cd3c0b
