Update Regression test expected outputs
When upgrading to Ruby 2.4.2 - there were changes made in how rounding
happens to certain negative numbers

Under Ruby 2.3.1 - -35.355.round(2) would return -35.35, whereas under
Ruby 2.4.2 it returns -35.36. As the latter behaviour is more consistent
with other rounding, we have considered it to be the correct case, hence
the updates to the expected outputs

E.g. Ruby 2.3.1:
- 2.355.round(2) = - 2.36
-35.355.round(2) = -35.35
-70.355.round(2) = -70.36

Ruby 2.4.2
- 2.355.round(2) = - 2.36
-35.355.round(2) = -35.36
-70.355.round(2) = -70.36

--- a/test/data/am-i-getting-minimum-wage-files.yml
+++ b/test/data/am-i-getting-minimum-wage-files.yml
@@ -21,7 +21,7 @@ lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_often_did_you_get
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_often_do_you_get_paid.govspeak.erb: 7c8cfebb76f688bfb03c3625cd413a24
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_old_are_you.govspeak.erb: 9d71f5503c82bb150961f8537453cce5
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/how_old_were_you.govspeak.erb: bfd909f04f6d523614226a0f9b8e7ea5
-lib/smart_answer_flows/am-i-getting-minimum-wage/questions/is_provided_with_accommodation.govspeak.erb: 083f1e522ae617d0aacf6851479ef28c
+lib/smart_answer_flows/am-i-getting-minimum-wage/questions/is_provided_with_accommodation.govspeak.erb: '083f1e522ae617d0aacf6851479ef28c'
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/past_accommodation_charge.govspeak.erb: 9278d1a8b2bf2d3979fb744902c8e9ef
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/past_accommodation_usage.govspeak.erb: fdf7d7f501d01da5f12f7cc638d2dc8f
 lib/smart_answer_flows/am-i-getting-minimum-wage/questions/past_payment_date.govspeak.erb: b79230f5df77e0257ff62c887fa6122e
