Add link to info pack for arrested in Iran

--- a/test/data/help-if-you-are-arrested-abroad-responses-and-expected-results.yml
+++ b/test/data/help-if-you-are-arrested-abroad-responses-and-expected-results.yml
@@ -31,6 +31,11 @@
   :outcome_node: true
 - :current_node: :which_country?
   :responses:
+  - iran
+  :next_node: :answer_one_generic
+  :outcome_node: true
+- :current_node: :which_country?
+  :responses:
   - spain
   :next_node: :answer_one_generic
   :outcome_node: true
