--- a/test/data/help-if-you-are-arrested-abroad-questions-and-responses.yml
+++ b/test/data/help-if-you-are-arrested-abroad-questions-and-responses.yml
@@ -6,5 +6,6 @@
 - cyprus  # has region links
 - democratic-republic-of-the-congo
 - greece  # additional download links: police
+- iran    # separate information pack to download specific to Iran
 - spain   # additional download links: pdf, lawyer, benefits, judicial
 - syria   # outcome: answer_three_syria
