2018/2019 uprating for calculate-statutory-sick-pay
Statutory pay goes from £89.35 to £92.05.

--- a/lib/data/rates/statutory_sick_pay.yml
+++ b/lib/data/rates/statutory_sick_pay.yml
@@ -33,3 +33,8 @@
   end_date: 2018-04-05
   lower_earning_limit_rate: 113
   ssp_weekly_rate: 89.35
+
+- start_date: 2018-04-06
+  end_date: 2019-04-05
+  lower_earning_limit_rate: 113
+  ssp_weekly_rate: 92.05
