Add 2018-2019 rates for married couple's allowance
https://trello.com/c/0BubHO5U/125-1-6-april-calculate-your-married-couples-allowance

--- a/lib/data/rates/married_couples_allowance.yml
+++ b/lib/data/rates/married_couples_allowance.yml
@@ -23,3 +23,8 @@
   end_date: 2018-04-05
   maximum_married_couple_allowance: 8445
   minimum_married_couple_allowance: 3260
+
+- start_date: 2018-04-06
+  end_date: 2019-04-05
+  maximum_married_couple_allowance: 8445
+  minimum_married_couple_allowance: 3360
