Uprate redundancy pay figures for 2018-2019
The Northern Ireland figures are not changing, but the figures used by
the rest of the UK are.

--- a/lib/data/rates/redundancy_pay.yml
+++ b/lib/data/rates/redundancy_pay.yml
@@ -23,3 +23,7 @@
   end_date: 2018-04-05
   max: "14,670"
   rate: 489
+- start_date: 2018-04-06
+  end_date: 2019-04-05
+  max: "15,240"
+  rate: 508
