--- a/lib/data/rates/redundancy_pay_northern_ireland.yml
+++ b/lib/data/rates/redundancy_pay_northern_ireland.yml
@@ -23,3 +23,7 @@
   end_date: 2018-04-05
   max: "15,000"
   rate: 500
+- start_date: 2018-04-06
+  end_date: 2019-04-05
+  max: "15,000"
+  rate: 500
