--- a/test/data/marriage-abroad-responses-and-expected-results.yml
+++ b/test/data/marriage-abroad-responses-and-expected-results.yml
@@ -7676,6 +7676,237 @@
   :outcome_node: true
 - :current_node: :country_of_ceremony?
   :responses:
+  - ethiopia
+  :next_node: :legal_residency?
+  :outcome_node: false
+- :current_node: :legal_residency?
+  :responses:
+  - ethiopia
+  - uk
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - uk
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - ceremony_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :legal_residency?
+  :responses:
+  - ethiopia
+  - third_country
+  :next_node: :what_is_your_partners_nationality?
+  :outcome_node: false
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_british
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_british
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_british
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_local
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_local
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_local
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+- :current_node: :what_is_your_partners_nationality?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_other
+  :next_node: :partner_opposite_or_same_sex?
+  :outcome_node: false
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_other
+  - opposite_sex
+  :next_node: :outcome_opposite_sex_marriage_in_ethiopia
+  :outcome_node: true
+- :current_node: :partner_opposite_or_same_sex?
+  :responses:
+  - ethiopia
+  - third_country
+  - partner_other
+  - same_sex
+  :next_node: :outcome_same_sex_civil_partnership
+  :outcome_node: true
+
+- :current_node: :country_of_ceremony?
+  :responses:
   - finland
   :next_node: :legal_residency?
   :outcome_node: false
